[gd_scene load_steps=6 format=3 uid="uid://xanty7s03b0e"]

[ext_resource type="Texture2D" uid="uid://dfkwjerncq3s" path="res://Textures/homeScreen.png" id="1_aamoc"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_vyg05"]
[ext_resource type="FontFile" uid="uid://bu8d81gwcxwus" path="res://Fonts/finPixel.ttf" id="2_u5cna"]
[ext_resource type="AudioStream" uid="uid://cup46u33ojgly" path="res://Audio/themeSong.mp3" id="4_j2ry6"]
[ext_resource type="Script" path="res://MapOptionButton.gd" id="5_wd71o"]

[node name="main_menu" type="Node2D"]
script = ExtResource("1_vyg05")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(544, 320)
texture = ExtResource("1_aamoc")

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioListener2D"]
process_mode = 3
stream = ExtResource("4_j2ry6")
volume_db = 6.559
autoplay = true

[node name="PlayButton" type="Button" parent="."]
offset_left = 475.0
offset_top = 438.0
offset_right = 627.0
offset_bottom = 486.0
theme_override_fonts/font = ExtResource("2_u5cna")
theme_override_font_sizes/font_size = 32
text = "START GAME"

[node name="MapOptionButton" type="OptionButton" parent="."]
offset_left = 424.0
offset_top = 502.0
offset_right = 683.0
offset_bottom = 551.0
tooltip_text = "MAP"
theme_override_fonts/font = ExtResource("2_u5cna")
theme_override_font_sizes/font_size = 32
script = ExtResource("5_wd71o")

[node name="MapButton" type="Button" parent="."]
offset_left = -82.0
offset_top = -92.0
offset_right = 74.0
offset_bottom = -44.0
scale = Vector2(-27.7252, 66.9945)
theme_override_fonts/font = ExtResource("2_u5cna")
theme_override_font_sizes/font_size = 32
text = "MAP EDITOR"

[node name="Label" type="Label" parent="."]
offset_left = 45.0
offset_top = 11.0
offset_right = 1045.0
offset_bottom = 161.0
theme_override_fonts/font = ExtResource("2_u5cna")
theme_override_font_sizes/font_size = 160
text = "CRAFT MY COAST"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="PlayButton" to="." method="_on_play_button_down"]
[connection signal="button_down" from="MapButton" to="." method="_on_map_button_down"]
